cabal-version:      2.4
name:               bitcoind-regtest
version:            0.1.1.0
synopsis:           A library for working with bitcoin-core regtest networks
homepage:           https://github.com/bitnomial/bitcoind-rpc
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Bitnomial, Inc. (c) 2020
author:             Ian Shipman
maintainer:         ics@gambolingpangolin.com
build-type:         Simple
extra-source-files: CHANGELOG.md

common core
    default-language: Haskell2010
    ghc-options:      -Wall -fno-warn-unused-do-bind
    build-depends:
          base                           >=4.12     && <4.15
        , bitcoind-rpc
        , cereal                        ^>=0.5
        , haskoin-core                  ^>=0.15
        , http-client                    >=0.6      && <0.8
        , process                       ^>=1.6
        , servant                        >=0.15     && <0.19
        , servant-client                 >=0.15     && <0.19
        , temporary                     ^>=1.3
        , text                          ^>=1.2

library
    import:         core
    hs-source-dirs: src/

    exposed-modules:
        Bitcoin.Core.Regtest

    build-depends:
        containers                       >=0.5      && <0.7


test-suite bitcoind-rpc-tests
    import:         core
    type:           exitcode-stdio-1.0
    main-is:        Main.hs
    hs-source-dirs: test/
    build-depends:
          bitcoind-regtest
        , tasty                         ^>=1.2
        , tasty-hunit                   ^>=0.10
