cabal-version:      2.4
name:               bitcoind-regtest
version:            0.4.0.0
synopsis:           A library for working with bitcoin-core regtest networks
homepage:           https://github.com/bitnomial/bitcoind-rpc
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Bitnomial, Inc. (c) 2020
author:             Ian Shipman
maintainer:         ics@gambolingpangolin.com
build-type:         Simple
extra-source-files: CHANGELOG.md

common core
    default-language: Haskell2010
    ghc-options:      -Wall -fno-warn-unused-do-bind
    build-depends:
          async >=2.0 && <2.3
        , base >=4.12 && <4.19
        , base64 ^>=0.4
        , bitcoind-rpc ^>=0.3
        , bytestring >=0.10 && <0.12
        , cereal ^>=0.5
        , directory ^>=1.3
        , haskoin-core >=0.15 && <0.22
        , http-client >=0.6 && <0.8
        , process ^>=1.6
        , servant >=0.19 && <0.21
        , servant-client >=0.19.1 && <0.21
        , temporary ^>=1.3
        , text >=1.2 && <2.1

library
    import:         core
    hs-source-dirs: src/

    exposed-modules:
        Bitcoin.Core.Regtest

    other-modules:
        Bitcoin.Core.Regtest.Generator
        Bitcoin.Core.Regtest.Framework

    build-depends:
          attoparsec >=0.13 && <0.15
        , containers >=0.5 && <0.7
        , transformers >=0.5 && <0.7

executable bitcoind-rpc-explorer
    import:         core
    main-is:        Main.hs
    hs-source-dirs: rpc-explorer/
    build-depends:
          bitcoind-regtest
        , bytestring >=0.10 && <0.12
        , optparse-applicative >=0.14 && <0.20


executable bitcoind-regtest-autominer
    import: core
    main-is: Main.hs
    hs-source-dirs: autominer/
    ghc-options: -threaded -O2
    build-depends:
          bitcoind-regtest
        , optparse-applicative >=0.14 && <0.20

test-suite bitcoind-rpc-tests
    import:         core
    type:           exitcode-stdio-1.0
    main-is:        Main.hs
    hs-source-dirs: test/

    other-modules:
        Bitcoin.Core.Test.Generator
        Bitcoin.Core.Test.Misc
        Bitcoin.Core.Test.PSBT
        Bitcoin.Core.Test.Utils
        Bitcoin.Core.Test.Wallet

    build-depends:
        , bitcoind-regtest
        , containers ^>=0.6
        , tasty >=1.2 && <1.5
        , tasty-hunit ^>=0.10
