cabal-version:      2.4
name:               bitcoind-regtest
version:            0.4.1.0
synopsis:           A library for working with bitcoin-core regtest networks
homepage:           https://github.com/bitnomial/bitcoind-rpc
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Bitnomial, Inc. (c) 2020
author:             Ian Shipman
maintainer:         ics@gambolingpangolin.com
build-type:         Simple
extra-source-files: CHANGELOG.md

common core
    default-language: Haskell2010
    ghc-options:      -Wall -fno-warn-unused-do-bind
    build-depends:
        , base >=4.12 && <4.22

library
    import:         core
    hs-source-dirs: src/

    exposed-modules:
        Bitcoin.Core.Regtest

    other-modules:
        Bitcoin.Core.Regtest.Crypto
        Bitcoin.Core.Regtest.Generator
        Bitcoin.Core.Regtest.Framework

    build-depends:
          async >=2.0 && <2.3
        , attoparsec >=0.13 && <0.15
        , bitcoind-rpc ^>=0.3
        , bytestring >=0.10 && <0.13
        , cereal ^>=0.5
        , containers >=0.5 && <0.8
        , directory ^>=1.3
        , haskoin-core >=1.0.0 && <1.3
        , http-client >=0.6 && <0.8
        , process ^>=1.6
        , servant >=0.19 && <0.21
        , temporary ^>=1.3
        , text >=1.2 && <2.2
        , transformers >=0.5 && <0.7

executable bitcoind-rpc-explorer
    import:         core
    main-is:        Main.hs
    hs-source-dirs: rpc-explorer/
    build-depends:
          bitcoind-regtest
        , bytestring >=0.10 && <0.13
        , optparse-applicative >=0.14 && <0.20
        , process ^>=1.6
        , servant >=0.19 && <0.21


executable bitcoind-regtest-autominer
    import: core
    main-is: Main.hs
    hs-source-dirs: autominer/
    ghc-options: -threaded -O2
    build-depends:
          async >=2.0 && <2.3
        , bitcoind-regtest
        , bitcoind-rpc ^>=0.3
        , haskoin-core >=1.0.0 && <1.3
        , http-client >=0.6 && <0.8
        , optparse-applicative >=0.14 && <0.20
        , text >=1.2 && <2.2

test-suite bitcoind-rpc-tests
    import:         core
    type:           exitcode-stdio-1.0
    main-is:        Main.hs
    hs-source-dirs: test/

    other-modules:
        Bitcoin.Core.Test.Generator
        Bitcoin.Core.Test.Misc
        Bitcoin.Core.Test.PSBT
        Bitcoin.Core.Test.Utils
        Bitcoin.Core.Test.Wallet

    build-depends:
          async >=2.0 && <2.3
        , base64 ^>=1.0
        , bitcoind-regtest
        , bitcoind-rpc ^>=0.3
        , cereal ^>=0.5
        , containers >=0.6 && <0.8
        , directory ^>=1.3
        , haskoin-core >=1.0.0 && <1.3
        , http-client >=0.6 && <0.8
        , tasty >=1.2 && <1.6
        , tasty-hunit ^>=0.10
        , temporary ^>=1.3
        , text >=1.2 && <2.2
