cabal-version:      2.2
name:               bitcoind-rpc
version:            0.3.1.0
synopsis:           A streamlined interface to bitcoin core using Haskoin types and Servant
homepage:           https://github.com/bitnomial/bitcoind-rpc
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Bitnomial, Inc. (c) 2020
author:             Ian Shipman
maintainer:         ics@gambolingpangolin.com
build-type:         Simple
extra-source-files: CHANGELOG.md

library
    default-language: Haskell2010
    hs-source-dirs: src/
    ghc-options:    -Wall

    exposed-modules:
        Bitcoin.Core.RPC
        Bitcoin.Core.RPC.Responses

    other-modules:
        Bitcoin.Core.RPC.Blockchain
        Bitcoin.Core.RPC.Generating
        Bitcoin.Core.RPC.Control
        Bitcoin.Core.RPC.Crypto
        Bitcoin.Core.RPC.Network
        Bitcoin.Core.RPC.Transactions
        Bitcoin.Core.RPC.Wallet
        Data.Aeson.Utils
        Servant.Bitcoind

    build-depends:
          aeson >=2.0 && <2.3
        , base >=4.12 && <4.22
        , base64 ^>=1.0
        , bytestring >=0.10 && <0.13
        , bitcoin-compact-filters ^>=0.1
        , cereal ^>=0.5
        , containers >=0.6 && <0.8
        , haskoin-core >=1.0.0 && < 1.3
        , http-client >=0.6 && <0.8
        , http-types ^>=0.12
        , mtl >=2.2 && <2.4
        , scientific ^>=0.3
        , servant >=0.19 && <0.21
        , servant-client >=0.19 && <0.21
        , servant-jsonrpc-client >=1.2 && <1.3
        , text >=1.2 && <2.2
        , time >=1.8 && <1.15
        , transformers >=0.5 && <0.7
